# latte

./: Makefile  README  latc_x86_64  latte.cabal  stack.yaml
app/: Main.hs
runtimec/: runtime.c
src/Language/Latte/Backend/: Asm.hs  CodeGen.hs  Peephole.hs  RegAlloc.hs  Stringify.hs
src/Language/Latte/Frontend/: AST.hs  GenIR.hs  Parser.hs
src/Language/Latte/Middleend/: DataflowAnalysisEngine.hs  DeadCodeElimination.hs  GenIR.hs  IR.hs  MemToReg.hs  Monad.hs  Propagate.hs  ShrinkEnds.hs  SimplifyControlFlow.hs  SimplifyPhi.hs  StrengthReduction.hs  TailCalls.hs
src/Text/Parsec/: TokenMod.hs
src/app/: Main.hs
src/runtimec/: runtime.c
src/src/Language/Latte/Backend/: Asm.hs  CodeGen.hs  Peephole.hs  RegAlloc.hs  SimplifyLabels.hs  Stringify.hs
src/src/Language/Latte/Frontend/: .Parser.hs.swp  GenIR.hs  Parser.hs
src/src/Language/Latte/Middleend/: .DominatorTree.hs.swp  CheckUnreachability.hs  DataflowAnalysisEngine.hs  DeadCodeElimination.hs  Fixed.hs  IR.hs  MemToReg.hs  Monad.hs  Propagate.hs  ShrinkEnds.hs  SimplifyPhi.hs  StrengthReduction.hs
