name:                latte
version:             0.1.0.0
synopsis:            Latte compiler
description:         Please see README.md
homepage:            https://github.com/amharc/latte
license:             BSD3
license-file:        LICENSE
author:              Krzysztof Pszeniczny
maintainer:          kp347208@students.mimuw.edu.pl
copyright:           2016 Krzysztof Pszeniczny
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Latte.Frontend.AST
                       Language.Latte.Frontend.Parser
                       Language.Latte.Middleend.IR
                       Language.Latte.Middleend.GenIR
                       Language.Latte.Middleend.Monad
                       Language.Latte.Middleend.MemToReg
  build-depends:       base >= 4.9 && < 5
                     , bytestring >= 0.10 && < 1.0
                     , lens >= 4.14 && < 5.0
                     , parsec >= 3.1 && < 4.0
                     , pretty >= 1.1 && < 2.0
                     , mtl >= 2.2 && < 3.0
                     , containers >= 0.5 && < 1.0
  default-language:    Haskell2010
  ghc-options:         -Wall

executable latte-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , latte
                     , parsec >= 3.1 && < 4.0
                     , pretty >= 1.1 && < 2.0
  default-language:    Haskell2010

test-suite latte-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , latte
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/amharc/latte
